# tauri-plugin-deep-link

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  example.rs
.github/workflows/: format.yml  lint.yml  release.yml
example/: Info.plist  main.rs
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs  linux.rs  macos.rs  shared.rs  template.desktop  windows.rs
