[package]
name = "tauri-plugin-deep-link"
version = "0.0.0"
authors = ["FabianLars <fabianlars@fabianlars.de>"]
description = "A Tauri plugin for deep linking support"
edition = "2021"
rust-version = "1.64"
exclude = ["/examples"]
license = "MIT"

[dependencies]
dirs-next = "2"
log = "0.4"
once_cell = "1"
tauri-utils = { version = "1" }

[target.'cfg(windows)'.dependencies]
interprocess = { git = "https://github.com/kotauskas/interprocess", rev = "e9bd7c1eaadb73497e26842ec70faea7e554e8e9", default-features = false }
winreg = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { package = "objc2", version = "0.3.0-beta.5" }
