[package]
name = "tauri-plugin-deep-link"
version = "0.1.1"
authors = ["FabianLars <fabianlars@fabianlars.de>"]
description = "A Tauri plugin for deep linking support"
repository = "https://github.com/FabianLars/tauri-plugin-deep-link"
edition = "2021"
rust-version = "1.64"
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/**", "Cargo.toml", "LICENSE_*"]

[dependencies]
dirs = "5"
log = "0.4"
once_cell = "1"
tauri-utils = { version = "1" }

[target.'cfg(windows)'.dependencies]
interprocess = { version = "1.2", default-features = false }
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.50.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.3.0-beta.5"
