[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["FabianLars <fabianlars@fabianlars.de>"]
license = "MIT"
publish = false
edition = "2021"
rust-version = "1.56"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.6", features = [] }
tauri-plugin-deep-link = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.0.0-rc.5", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
